--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./*"]
     }
   },
+
   "include": [
     "next-env.d.ts",
     "**/*.ts",
@@ -30,7 +31,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "declarations.d.ts"
-  ],
+    "declarations.d.ts",
+    "next.config.js"  ],
   "exclude": ["node_modules"]
+  
 }
