--- a/package.json
+++ b/package.json
@@ -9,30 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@types/html2canvas": "^0.5.35",
     "@types/qrcode": "^1.5.6",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-qrcode": "^0.3.6"
-=======
-    "lucide-react": "^0.263.1",
-    "next": "14.2.21",
-    "qrcode.react": "^3.1.0",
-    "react": "^18",
-    "react-dom": "^18"
->>>>>>> 01b509d82e9f0f4f9cd94666f4922adef32773d7
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.21",
+    "@types/html2canvas": "^1.0.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
